--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 
 
 <h1>Wordpress Posts outside Wordpress</h1>
-<h3 style="text-align: justify;">Code developed by <a href="https://www.tawhidurrahmandear.com/" target="_blank" rel="noopener">Tawhidur Rahman Dear</a> : Politician, and Writer of <a href="https://roc.tawhidurrahmandear.com/" target="_blank" rel="noopener">Review of 193 Constitutions</a></h3>
+<h3 style="text-align: justify;">Code developed by <a href="https://www.tawhidurrahmandear.com/" target="_blank" rel="noopener">Tawhidur Rahman Dear</a> : Writer of <a href="https://roc.tawhidurrahmandear.com/" target="_blank" rel="noopener">Review of 193 Constitutions</a></h3>
 
 	
     <div style="margin: 20px 0; padding: 10px; background: #f5f5f5;">
@@ -26,3 +26,4 @@
     
 
     <div id="pagination" class="pagination"></div>
+
