--- a/index.html
+++ b/index.html
@@ -3,27 +3,16 @@
 
 <!-- WordPress News Aggregator -->
 <!-- developed by Tawhidur Rahman Dear, https://www.tawhidurrahmandear.com -->
-<!-- Live Preview available at https://tawhidurrahmandear.github.io/wordpress-news-aggregator/ -->
+<!-- Live Preview available at https://www.devilhunter.net/2026/01/wordpress-news-aggregator.html -->
 
 
 
 <!--more-->
 
 
-<h1>Wordpress Posts outside Wordpress</h1>
+<h1>WordPress News Aggregator</h1>
 <h3 style="text-align: justify;">Code developed by <a href="https://www.tawhidurrahmandear.com/" target="_blank" rel="noopener">Tawhidur Rahman Dear</a> : Writer of <a href="https://roc.tawhidurrahmandear.com/" target="_blank" rel="noopener">Review of 193 Constitutions</a></h3>
 
-	
-    <div style="margin: 20px 0; padding: 10px; background: #f5f5f5;">
-        <button onclick="sortPosts('asc')" style="padding: 8px 16px; margin-right: 10px;">Sort A-Z</button>
-        <button onclick="sortPosts('desc')" style="padding: 8px 16px;">Sort Z-A</button>
-        <span style="margin-left: 20px; color: #666;">
-            Showing: <span id="page-info">-</span>
-        </span>
-    </div>
-    
-    <div id="posts-container">Loading posts...</div>
-    
 
-    <div id="pagination" class="pagination"></div>
-
+<div id="posts-container">Loading ...</div>
+<div id="pagination" class="pagination"></div>
